--- a/README.adoc
+++ b/README.adoc
@@ -1,13 +1,16 @@
 # RKI Fetcher
 
-## Introduction:
+## 🔥 Introduction:
 
 A very simple fetcher for COVID19 statistics offered by the Robert-Koch-Institut (RKI) in Germany.
 
-## Usage:
+## 🔧 Usage:
 
 To be added.
 
-## License:
+## ⚖ License:
 
-To be added.
+MarcoSteinke/RKI-Fetcher is licensed under the MIT License
+A short and simple permissive license with conditions only requiring preservation of copyright and license notices. Licensed works, modifications, and larger works may be distributed under different terms and without source code.
+
+The license can be found https://github.com/MarcoSteinke/RKI-Fetcher/blob/main/LICENSE[here] .
