--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,19 @@ A very simple fetcher for COVID19 statistics offered by the Robert-Koch-Institut
 
 ## 🔧 Usage:
 
-To be added.
+Add the following line to your HTML:
+
+  <script src="cdn.bestofcode.net/rkifetch"></script>
+
+Instantiate a new RKIFetcher:
+
+  const rkiFetcher = new RKIFetcher();
+
+You have the following options to manipulate the instance during instantiation:
+
+  const rkiFetcher = new RKIFetcher({city: "Düsseldorf"})
+
+There are several other options to use (in the future).
 
 ## ⚖ License:
 
