--- a/README.adoc
+++ b/README.adoc
@@ -4,7 +4,11 @@ image::https://raw.githubusercontent.com/MarcoSteinke/RKI-Fetcher/main/src/css/i
 
 ## 🔥 Introduction:
 
-A very simple fetcher for COVID19 statistics offered by the Robert-Koch-Institut (RKI) in Germany. The information in this README is still a placeholder. The tool will be implemented soon.
+A very simple fetcher for COVID19 statistics offered by the Robert-Koch-Institut (RKI) in Germany. 
+
+1⃣ Select your `district`
+2⃣ Check the latest information about your surrounding
+3⃣ Share the information with your friends, family or coworkers
 
 ## 🔧 Usage:
 
