--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,7 @@ image::https://raw.githubusercontent.com/MarcoSteinke/RKI-Fetcher/main/src/css/i
 
 A very simple fetcher for COVID19 statistics offered by the Robert-Koch-Institut (RKI) in Germany. 
 
-1️⃣ Select your `district`
+1️⃣ `Select` your district
 
 2️⃣ `Check` the latest information about your surrounding
 
