--- a/README.adoc
+++ b/README.adoc
@@ -1,16 +1,18 @@
 # 📈 RKI Fetcher
 
+## Current statistics, fast and simple.
+
 image::https://raw.githubusercontent.com/MarcoSteinke/RKI-Fetcher/main/src/css/image/screenshot.png[width=800]
 
 ## 🔥 Introduction:
 
 A very simple fetcher for COVID19 statistics offered by the Robert-Koch-Institut (RKI) in Germany. 
 
-1️⃣ `Select` your district
+1️⃣ `SELECT` your district
 
-2️⃣ `Check` the latest information about your surrounding
+2️⃣ `CHECK` the latest information about your surrounding
 
-3️⃣ `Share` the information with your friends, family or coworkers
+3️⃣ `SHARE` the information with your friends, family or coworkers
 
 ## 🔧 Usage:
 
