--- a/README.adoc
+++ b/README.adoc
@@ -24,6 +24,7 @@ There are several other options to use (in the future).
 * [x] frontend rendering component
 * [ ] Server which will cache the most recent data for much faster loading times
 * [ ] load a default picture per day
+* [ ] persist data to run statistics
 
 ## ⚖ License:
 
