--- a/README.adoc
+++ b/README.adoc
@@ -53,6 +53,8 @@ There are several other options to use (in the future).
 * [ ] prefetch data every 6 hours
 * [ ] show news after loading a district
 * [ ] show what is allowed or not after loading a district
+* [ ] Add validation to render component
+* [ ] Make validation reload the page on error
 
 
 ## ⚖ License:
