--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-# 📈 RKI Fetcher
+# 📈 qovis
 
 ## Current statistics, fast and simple.
 
@@ -14,34 +14,7 @@ A very simple fetcher for COVID19 statistics offered by the Robert-Koch-Institut
 
 3️⃣ `SHARE` the information with your friends, family or coworkers
 
-## 🔧 Usage:
-
-Add the following line to your HTML:
-
-```html
-<script src="cdn.bestofcode.net/rkifetch"></script>
-```
-
-Instantiate a new RKIFetcher:
-
-```javascript 
-const rkiFetcher = new RKIFetcher();
-```
-
-You have the following options to manipulate the instance during instantiation:
-
-```javascript
-const rkiFetcher = new RKIFetcher({city: "Düsseldorf", mode: "detailed"})
-```
-
-There are several other options to use (in the future).
-
 ## Future features:
-
-* [ ] current Corona Hotspots
-* [ ] current safest districts
-* [ ] n closest districts
-* [ ] frontend rendering component
 
 ## ⚖ License:
 
