--- a/README.adoc
+++ b/README.adoc
@@ -6,7 +6,7 @@
 
 ## 🔥 Introduction:
 
-Try it: https://qovis.steinke-it.com !
+Try it: http://qovis.steinke-it.com !
 
 A very simple fetcher for COVID19 statistics offered by the Robert-Koch-Institut (RKI) in Germany. 
 
